--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <%= render "shared/notification" %>
-    <%= yield %>
+    <div class="container py-3">
+      <% if current_user && current_user.role=="Admin" %>
+        <%= render "shared/nav_admin" %>
+      <% elsif current_user && current_user.role=="User" %>
+        <%= render "shared/nav_user" %>
+      <% else %>
+        <%= render "shared/nav_public" %>
+      <% end %>
+      
+      <%= render "shared/notification" %>
+      <%= yield %>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
