--- a/app/views/shared/_nav_public.html.erb
+++ b/app/views/shared/_nav_public.html.erb
@@ -1,37 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
-  <div class="container-fluid">
-    <%= link_to root_path, :class=>"navbar-brand" do %>
-      <div class="navbar-brand">
-        <%= image_tag("aurora.png", :size=>"50x50") %>
-        <span class="ms-2 brand">Aurora</span>
-      </div>
-    <% end %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <%= link_to new_booking_path, :class=>"ms-2 btn btn-primary" do %>
-            <i class="far fa-comment-dots me-1"></i> Booking Service
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to rams_path, :class=>"ms-2 btn btn-primary" do %>
-            <i class="far fa-file-alt me-1"></i> RAM Form
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to new_user_session_path, :class=>"ms-2 btn btn-outline-primary" do %>
-            <i class="fas fa-sign-in-alt me-1"></i> Login
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to new_user_registration_path, :class=>"ms-2 btn btn-outline-primary" do %>
-            <i class="far fa-handshake me-1"></i> Sign Up
-          <% end %>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<header>
+  <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+  <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+    <%= image_tag("aurora-logo.png", :size=>"40x32")%>
+    <span class="fs-4">Aurora</span>
+  </a>
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+      <%= link_to "Home", root_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to "Booking Service", bookings_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to "RAM Form", rams_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to "Login", new_user_session_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to "Sign Up", new_user_registration_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+  </nav>
+</div>
+</header>
