--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,24 +1,11 @@
 @import "trix";
 
-html,body{
-  height: 100vh;
-  //margin-top: 40px;
-}
-
 abbr{
   display: none;
 }
 
 .trix-content{
   height: 45vh;
-}
-
-#notice_wrapper{
-  z-index: 1;
-  position: relative;
-  top: 50px;
-  text-align: center;
-  margin-top: 50px;
 }
 
 .brand{
@@ -34,14 +21,14 @@ abbr{
   }
 }
 
-body {
-  background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
-}
-
 .container {
   max-width: 960px;
 }
 
 .pricing-header {
   max-width: 700px;
+}
+
+.mt-18vh{
+  margin-top: 18vh !important;
 }
