--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,11 @@
-<div class="container-fluid h-100">
-  <div class="row h-100 justify-content-center align-items-center">
-    <div class="col-lg-4 col-sm-12">
+<div class="container-fluid">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-lg-6 col-sm-12">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <div class="text-center">
-          <%= image_tag("aurora.png", :class=>"img-fluid", :size=>"160x160")%>
+        <div class="card p-3">
+          <div class="card-body">
+            <div class="text-center">
+          <%= image_tag("aurora-logo.png", :class=>"img-fluid")%>
           <h1 class="h3 mb-3 fw-normal mt-4">Sign up</h1>
         </div>
 
@@ -58,6 +60,8 @@
               <%= link_to "Log in", new_session_path(resource_name),:class=>"btn btn-outline-primary col-12" %><br />
             <% end %>
           </small>
+        </div>
+          </div>
         </div>
       <% end %>
     </div>
