--- a/app/views/shared/_nav_public.html.erb
+++ b/app/views/shared/_nav_public.html.erb
@@ -8,8 +8,8 @@
       <%= link_to "Home", root_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
       <%= link_to "Booking Service", bookings_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
       <%= link_to "RAM Form", rams_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
-      <%= link_to "Login", new_user_session_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
-      <%= link_to "Sign Up", new_user_registration_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to "Login", new_user_session_path, :class=>"btn btn-outline-primary me-1"%>
+      <%= link_to "Sign Up", new_user_registration_path, :class=>"btn btn-primary"%>
   </nav>
 </div>
 </header>
