--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user && current_user.role=="Admin" %>
-<div class="container-fluid" style="margin-top: 80px">
+<div class="container-fluid">
   <div class="row jutsify-content-center pt-3">
     <div class="col-lg-12 mt-5">
       <span class="h6 bg-info text-light py-2 rounded-pill px-4">
@@ -68,7 +68,7 @@
   </div>
 
 <% else %>
-<div class="container-fluid" style="margin-top: 80px">
+<div class="container-fluid">
   <div class="row jutsify-content-center pt-3">
     <div class="col-lg-12 mt-5">
       <span class="h6 bg-info text-light py-2 rounded-pill px-4">
