--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top: 80px">
+<div class="container-fluid">
   <div class="row jutsify-content-center pt-3">
     <div class="col-lg-12">
       <div class="card mt-4">
@@ -6,8 +6,16 @@
           <i class="fas fa-question-circle me-1"></i>Booking Procedures
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">1. See our complete service list and pricing options from <a href="http://aurora.upsi.edu.my/perkhidmatan/" target="_blank"><i class="fas fa-external-link-alt me-1"></i>here</a></li>
-          <li class="list-group-item">2. Make payment in <a href="https://epayment.upsi.edu.my/" target="_blank"><i class="fas fa-external-link-alt me-1"></i>ePayment</a></li>
+          <li class="list-group-item">1. See our complete service list and pricing options from 
+            <%= link_to root_path do %>
+              <i class="fas fa-external-link-alt me-1"></i>Information Page
+            <% end %>
+          </li>
+          <li class="list-group-item">2. Make payment in the following account.<br>
+            Bank: MayBank<br>
+            A/C Name: Shimol Khan<br>
+            A/C Number: 158088505104
+          </li>
           <li class="list-group-item">3. Collect the Payment Reference & Use in filling up booking form <i class="far fa-arrow-alt-circle-down me-1"></i></li>
         </ul>
       </div>
