--- a/app/views/rams/index.html.erb
+++ b/app/views/rams/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding-top: 80px">
+<div class="container-fluid">
   <div class="row justify-content-center pt-3">
     <div class="col-lg-12 mt-5">
       <span class="h6 bg-info text-light py-2 rounded-pill px-4">
@@ -65,7 +65,7 @@
   </div>
 <br>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-12">
       <%= link_to new_ram_path, :class=>"btn btn-primary col-12" do %>
