--- a/app/views/rams/show.html.erb
+++ b/app/views/rams/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid h-100">
-  <div class="row justify-content-center align-items-center h-100">
+<div class="container-fluid">
+  <div class="row justify-content-center align-items-center">
     <div class="col-lg-12">
       <div class="card mb-2 mt-2">
         <div class="card-header">
