--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding-top: 80px">
+<div class="container-fluid">
   <div class="row jutsify-content-center pt-3">
     <div class="col-lg-12">
       <div class="card mt-4 mb-2">
