--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid h-100">
-  <div class="row justify-content-center align-items-center h-100">
+<div class="container-fluid">
+  <div class="row justify-content-center align-items-center">
     <div class="col-lg-12">
       <div class="card my-2">
         <div class="card-header">
@@ -29,6 +29,8 @@
               <p class="lead"><%= sanitize @service.description %></p>
             </div>
           </small>
+          <br>
+          <small class="text-muted">Price: <%= @service.price %> RM</small>
         </div>
       </div>
       <% if current_user && current_user.role=="Admin" %>
