--- a/app/views/shared/_nav_user.html.erb
+++ b/app/views/shared/_nav_user.html.erb
@@ -7,10 +7,12 @@
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
       <%= link_to "Home", root_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
       <%= link_to "Booking Service", new_booking_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
-      <%= link_to "My Bookings", bookings_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to bookings_path, :class=>"me-3 py-2 text-dark text-decoration-none" do %>
+        My Bookings (<%= current_user.bookings.count%>)
+      <% end %>
       <%= link_to "RAM Form", new_ram_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
-      <%= link_to "Update Account", edit_user_registration_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
-      <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class=>"me-3 py-2 text-dark text-decoration-none"%>
+      <%= link_to "Update Account", edit_user_registration_path, :class=>"btn btn-outline-primary me-1"%>
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class=>"btn btn-primary"%>
   </nav>
 </div>
 </header>
