--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -12,9 +12,10 @@
             <% end %>
           </li>
           <li class="list-group-item">2. Make payment in the following account.<br>
-            Bank: MayBank<br>
-            A/C Name: Shimol Khan<br>
-            A/C Number: 158088505104
+            BENDAHARI UPSI (Bank Islam Malaysia Berhad No. Akaun: 08068010003264)
+            <br>
+            Phone Number: 019-9675997 (Encik Fuad)
+            <br>
           </li>
           <li class="list-group-item">3. Collect the Payment Reference & Use in filling up booking form <i class="far fa-arrow-alt-circle-down me-1"></i></li>
         </ul>
