--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -9,6 +9,7 @@
           Requested Booking For <%= @booking.date_time.strftime("%B, %d, %Y %I:%M %p")%>
         </div>
         <div class="card-body">
+        <p>Package: <%= @booking.service.name %></p>
           <p>Current Status:
             <% if @booking.status=="Pending Descision" %>
               <span class="badge bg-warning">Pending Descision</span>
@@ -18,6 +19,9 @@
               <span class="badge bg-danger">Rejected</span>
             <% end %>
           </p>
+          <% if @booking.reason_of_rejections? %>
+            <p>Rejection Reason: <%= @booking.reason_of_rejections %></p>
+          <% end %>
           <p>Booking Submission Date: <%= @booking.created_at.strftime("%B, %d, %Y")%></p>
         </div>
       </div>
