--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -6,16 +6,40 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://images.pexels.com/photos/3661244/pexels-photo-3661244.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="d-block w-100" alt="..." style="border-radius: 10px">
+            <%= image_tag("1.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <img src="https://images.pexels.com/photos/479817/pexels-photo-479817.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="d-block w-100" alt="..." style="border-radius: 10px">
+            <%= image_tag("2.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <img src="https://images.pexels.com/photos/3208282/pexels-photo-3208282.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="d-block w-100" alt="..." style="border-radius: 10px">
+            <%= image_tag("3.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("4.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("5.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("6.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("7.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("8.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("9.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -33,7 +57,7 @@
 
 <div class="container-fluid py-3 mt-4">
   <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-    <h1 class="display-4 fw-normal">Packages</h1>
+    <h1 class="display-4 fw-normal">INSTRUMENTS</h1>
       <p class="fs-5 text-muted">We provide booking services as below. Click <%= link_to "Here", new_booking_path %> to create a booking for your desired service.</p>
     </div>
   </header>
@@ -51,7 +75,7 @@
               <%= sanitize service.description%>
             </ul>
           </div>
-          <div class="card-footer text-center">MYR Price</div>
+          <div class="card-footer text-center"><%= service.price.to_i%> RM</div>
         </div>
       </div>
       <% end %>
