--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -11,10 +11,10 @@
       <%= f.input :description, as: :trix_editor, placeholder: "Description" %>
     </div>
     <div class="mb-2">
-      <%= f.input :price, label: "Price (RM)", placeholder: "Service price(RM)" %>
+      <%= f.input :capacity, label: "Capacity (Minutes)", placeholder: "Service capacity(Minutes)" %>
     </div>
     <div class="mb-2">
-      <%= f.input :capacity, label: "Capacity (Minutes)", placeholder: "Service capacity(Minutes)" %>
+      <%= f.input :price,placeholder: "Price" %>
     </div>
     <div class="mb-2">
       <%= f.input :usage_reminder, label: "Remind When Usage (Minutes)", placeholder: "Remind When Usage (Minutes)" %>
