--- a/app/views/shared/_nav_public.html.erb
+++ b/app/views/shared/_nav_public.html.erb
@@ -1,8 +1,7 @@
 <header>
   <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
   <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-    <%= image_tag("aurora-logo.png", :size=>"40x32")%>
-    <span class="fs-4">Aurora</span>
+    <%= image_tag("p80.png", :size=>"60x50")%>
   </a>
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
       <%= link_to "Home", root_path, :class=>"me-3 py-2 text-dark text-decoration-none"%>
