Added Slider Images URL

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -15,31 +15,31 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <%= image_tag("1.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/AgIieX9.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("2.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/vmWqjmu.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("3.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/QdRRPYc.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("4.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/X4Y6ET4.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("5.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/wLDCymv.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("6.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/qPF1GUA.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("7.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/fhIHJBF.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("8.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/1GN6qJe.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
           <div class="carousel-item">
-            <%= image_tag("9.jpeg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
+            <%= image_tag("https://i.imgur.com/X1K2HUy.jpg", :class=>"d-block w-100", :style=>"border-radius: 10px")%>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
